Simplify the soul system
